# ai_sql_agent

./: .gitignore  README.md  TESTING.md  app.py  pyproject.toml  rag_sql_generator.py  requirements.txt  run_sql.py  server.py
scripts/: create_vectorstore.py  extract_schema.py  test_safety.py
src/: config.py  database.py  ingestion.py  logger.py  rag.py  visualization.py
tests/: test_edge_cases.py  test_integration.py
