[project]
name = "ai-sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=0.9.0",
    "faiss-cpu>=1.13.2",
    "groq>=0.37.1",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-pinecone>=0.2.13",
    "langsmith>=0.1.0",
    "pandas>=2.3.3",
    "pinecone>=7.3.0",
    "plotly>=6.5.2",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.0",
    "tiktoken>=0.12.0",
]
